--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "PoolSettings": {
+    "PoolFolder": "F:\\Data\\Pictures\\2024\\Halloween",
+    "PoolFilter": ".jpg,.jpeg"
+  }
 }
