--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "PoolSettings": {
-    "PoolFolder": "F:\\Data\\Pictures\\2024",
+    "PoolFolder": "C:\\temp\\photos",
     "PoolFilter": ".jpg,.jpeg"
   }
 }
