--- a/appsettings.json
+++ b/appsettings.json
@@ -8,6 +8,14 @@
   "AllowedHosts": "*",
   "PoolSettings": {
     "PoolFolder": "C:\\temp\\photos",
-    "PoolFilter": ".jpg,.jpeg"
+    "PoolFilter": ".jpg,.jpeg",
+    "SlideshowIntervalMs": 3000
+  },
+  "Kestrel": {
+    "Endpoints": {
+      "Http": {
+        "Url": "http://localhost:8080"
+      }
+    }
   }
 }
