--- a/cherished-server.csproj
+++ b/cherished-server.csproj
@@ -7,4 +7,8 @@
     <RootNamespace>cherished_server</RootNamespace>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="ExifLibrary" Version="1.0.13" />
+  </ItemGroup>
+
 </Project>
