--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "PoolSettings": {
-    "PoolFolder": "C:\\temp\\photos",
+    "PoolFolder": "G:\\OneDrive\\Pictures Backup",
     "PoolFilter": ".jpg,.jpeg",
     "SlideshowIntervalMs": 3000
   },
