--- a/cherished-server.csproj
+++ b/cherished-server.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ExifLibrary" Version="1.0.13" />
+    <PackageReference Include="ExifLibNet" Version="2.1.4" />
   </ItemGroup>
 
 </Project>
