Flag, timer removed in manual mode, status message fix

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "PoolSettings": {
-    "PoolFolder": "G:\\OneDrive\\Pictures Backup",
+    "PoolFolder": "C:\\temp",
     "PoolFilter": ".jpg,.jpeg",
     "SlideshowIntervalMs": 3000
   },
